# VIP-Agent

./: .env.example  .gitignore  CLAUDE.md  Daily_changes.md  Dockerfile.orchestrator  ENTERPRISE_DEPLOYMENT.md  README.md  docker-compose.yml
.github/workflows/: build-desktop.yml
adapters/: __init__.py  asset_adapter.py  base_adapter.py  csv_data_adapter.py  mock_data.py  real_asset_adapter.py  real_realty_adapter.py  real_stock_adapter.py  realty_adapter.py  stock_adapter.py  yahoo_stock_adapter.py
adapters/asset-adapter/: __init__.py
adapters/realty-adapter/: __init__.py
adapters/stock-adapter/: __init__.py
agents/mock-asset-agent/: agent.py  main.py
agents/mock-realty-agent/: agent.py  main.py
agents/mock-stock-agent/: agent.py  (+1 more)
apps/admin-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
apps/admin-dashboard/src-tauri/capabilities/: default.json
apps/admin-dashboard/src-tauri/frontend/: index.html
apps/admin-dashboard/src-tauri/src/: lib.rs
db/: supabase_schema.sql
docs/: AI_ASSIST_SAFETY_RULES.md  API_REFERENCE.md  BACKEND_FOR_VERCEL_FRONTEND.md  CHATBOT_ARCHITECTURE.md  CONTRACTS.md  DEMO_FLOW.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST_VERCEL.md  DEPLOY_VERCEL_FRONTEND.md  ERD.md  FINAL_VERCEL_DEPLOY_READINESS.md  FUTURE_LLM_UPGRADE_GUIDE.md  GITHUB_TO_VERCEL_IMPORT.md  LOCAL_SETUP.md  REPLACE_MOCK_AGENTS.md  TEAM_INTEGRATION.md  VERCEL_ENVIRONMENT_VARIABLES.md  VERCEL_GATEWAY_OPTION.md  VERCEL_PROJECT_SETUP.md  asset-agent-backend-bug.md
scripts/: apply_phase_1_6_migrations.sql  seed_asset_agent.py  seed_asset_via_excel.py
(+252 files in other folders)
